               directory,

             • the curves were not 'named' IRSL if laser diods instead
               of LEDs are facilitated in the lexsyg reader; fixed\

             • the element 'stimulator' and 'detecteur' appeared twice
               in the info element list after import, corrected.,

             • functioned gained a new argument ‘pattern’ to be used if
               more than one XSYG-file is imported at one time.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • If the lower temperature for the TL curve calculation
               was not at 0, wrong shifted TL curves had been produced
               (this happens normally for BIN-files produced by FI
               lexsyg readers),

             • along with this the x-values for the curves are now
               consequently calculated using the LOW and the HIGH
               values given in the BIN-files. This may cause a shift of
               the surves towards 0 for CW-curves (#235),

             • TL curves can furthermore consists of different parts,
               including preheat and a second TL rise. This was not
               respected during calculting the x-axis values, leading
               to wrong scaled temperature axis, corrected (#255).

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • A new argument ‘grain’ can be used to further limit the
               transformation to specific grains in the data set,

             • the arguement ‘pos’ is no longer required. If nothing is
               provided every position will be transformed and the
               function returns a list of ‘RLum.Analysis’-objects,

             • along with this the argument ‘pos’ now accepts a vector
               as input (i.e., more than on position can be provided
               for the conversion),

             • new argument ‘txtProgressBar’ added. The default is set
               to ‘FALSE’ as the computation time just become relevant