@@ -1363,12 +1363,12 @@
 </td>
 <td class=cellinside>0.2.0
 </td>
-<td class=cellinside>2015-10-16
+<td class=cellinside>2015-11-18
 </td>
-<td class=cellinside>18:19:05
+<td class=cellinside>18:45:21
 
 </td>
-<td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)  Based on suggestion by Willian Amidon and Andrew Louis Gorin.<br />  R Luminescence Package Team
+<td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)  Based on a suggestion by Willian Amidon and Andrew Louis Gorin.<br />  R Luminescence Package Team
 </td></tr>
  
 <tr> 
@@ -1399,11 +1399,11 @@
 </td>
 <td class=cellinside><br /> Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.<br />
 </td>
-<td class=cellinside>0.5.3
+<td class=cellinside>0.5.4
 </td>
 <td class=cellinside>2015-11-18
 </td>
-<td class=cellinside>17:06:56
+<td class=cellinside>18:42:42
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
