@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-0 package
-% Wed Nov 18 17:30:32 2015
+% Wed Nov 18 18:47:36 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -133,11 +133,11 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   69 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.11.0 & 2015-11-11 & 18:18:13
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR Freiberg, (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  70 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt (ASCII) file produced by a Daybreak reader into R.$<$br /$>$ & 0.2.0 & 2015-10-16 & 18:19:05
- & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)  Based on suggestion by Willian Amidon and Andrew Louis Gorin.$<$br /$>$  R Luminescence Package Team \\ 
+  70 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt (ASCII) file produced by a Daybreak reader into R.$<$br /$>$ & 0.2.0 & 2015-11-18 & 18:45:21
+ & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)  Based on a suggestion by Willian Amidon and Andrew Louis Gorin.$<$br /$>$  R Luminescence Package Team \\ 
   71 & read\_SPE2R & Import Princeton Intruments (TM) SPE-file into R & $<$br /$>$ Function imports Princeton Instruments (TM) SPE-files into R environment and$<$br /$>$ provides  RLum  objects as output.$<$br /$>$ & 0.1.0 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  72 & read\_XSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.5.3 & 2015-11-18 & 17:06:56
+  72 & read\_XSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.5.4 & 2015-11-18 & 18:42:42
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   73 & replicate\_RLum & General replication function for RLum S4 class objects & $<$br /$>$ Function replicates RLum S4 class objects and returns a list for this objects$<$br /$>$ & 0.1.0 & 2015-11-15 & 23:27:50
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
