@@ -449,7 +449,14 @@ Changes in version 0.5.0 (4th, December, 2015):
                in the info element list after import, corrected.,
 
              • functioned gained a new argument ‘pattern’ to be used if
-               more than one XSYG-file is imported at one time.
+               more than one XSYG-file is imported at one time,
+
+             • all hard function stops had been removed (e.g., wrong
+               file name etc.), instead a warning is shown and ‘NULL’
+               is returned. This ensures that the function can be
+               safely run within a loop,
+
+             • press the turbo button by more efficient coding.
 
          • ‘Risoe.BINfileData2RLum.Analysis()’
 
